<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@drawable/dialog_bg">

    <!-- Title -->
    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_out_from_app"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        android:gravity="center"/>

    <!-- Message -->
    <TextView
        android:id="@+id/tvMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/are_you_sure_you_would_like_to_sign_out_of_your_panditji_app"
        android:textSize="14sp"
        android:fontFamily="@font/inter"
        android:textColor="@color/black"
        android:gravity="center"/>

    <!-- Buttons -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:padding="@dimen/_10sdp"
            android:textColor="@color/white"
            app:cornerRadius="30dp" />

        <Button
            android:id="@+id/btnSignOut"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:backgroundTint="@color/black"
            android:text="@string/sign_out"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:padding="@dimen/_10sdp"
            android:textColor="@android:color/white"
            app:cornerRadius="30dp" />
    </LinearLayout>
</LinearLayout>
</layout>

