<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragment.UpcomingBookingDetailsFragment">

        <!-- Fixed Toolbar -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clToolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/ivBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:src="@drawable/ic_back"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

            <TextView
                android:id="@+id/tvTittle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/upcoming_booking"
                android:fontFamily="@font/inter_semibold"
                android:textSize="16sp"
                android:textColor="@color/black"
                app:layout_constraintStart_toEndOf="@id/ivBack"
                app:layout_constraintBottom_toBottomOf="@id/ivBack"
                app:layout_constraintTop_toTopOf="@id/ivBack" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <!-- Scrollable Content -->
        <ScrollView
            android:layout_below="@id/clToolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/profileContainer"
                    android:layout_marginTop="10dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent">

                    <ImageView
                        android:id="@+id/profileImage"
                        android:layout_width="@dimen/_120sdp"
                        android:layout_height="@dimen/_120sdp"
                        android:src="@drawable/profile_image"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent" />

                    <TextView
                        android:id="@+id/userName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:fontFamily="@font/inter_medium"
                        android:text="@string/full_name"
                        android:textColor="@color/black"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/profileImage" />

                </androidx.constraintlayout.widget.ConstraintLayout>


                <LinearLayout
                    android:id="@+id/llr"
                    android:layout_marginTop="@dimen/_20sdp"
                    app:layout_constraintTop_toBottomOf="@+id/profileContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/booking_Id"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/booking_id_123546567895"
                        android:textColor="#000000"
                        android:fontFamily="@font/inter_medium"
                        android:textSize="14sp"
                        android:layout_marginTop="@dimen/twenty_dp"
                        app:layout_constraintTop_toBottomOf="@id/frImage"
                        app:layout_constraintStart_toStartOf="parent"/>


                    <TextView
                        android:id="@+id/label_puja"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/puja"
                        android:textColor="#000000"
                        android:fontFamily="@font/inter_medium"
                        android:textSize="14sp"
                        android:layout_marginTop="@dimen/twenty_dp"
                        app:layout_constraintTop_toBottomOf="@id/frImage"
                        app:layout_constraintStart_toStartOf="parent"/>

                    <TextView
                        android:id="@+id/poojaName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="#6F6F6F"
                        android:fontFamily="@font/inter"
                        android:textSize="14sp"
                        android:padding="@dimen/_7sdp"
                        android:background="@drawable/orange_stroke_white_solid_radi_1dp"
                        android:layout_marginTop="6dp"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/addresss"
                        android:textColor="#000000"
                        android:fontFamily="@font/inter_medium"
                        android:textSize="14sp"
                        android:layout_marginTop="@dimen/twenty_dp"
                  />

                    <TextView
                        android:id="@+id/address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="#6F6F6F"
                        android:fontFamily="@font/inter"
                        android:textSize="14sp"
                        android:padding="@dimen/_7sdp"
                        android:background="@drawable/orange_stroke_white_solid_radi_1dp"
                        android:layout_marginTop="6dp"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/puja_samagri"
                        android:textColor="#000000"
                        android:fontFamily="@font/inter_medium"
                        android:textSize="14sp"
                        android:layout_marginTop="@dimen/twenty_dp"
                  />

                    <TextView
                        android:id="@+id/poojaSamagri"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="#6F6F6F"
                        android:fontFamily="@font/inter"
                        android:textSize="14sp"
                        android:padding="@dimen/_7sdp"
                        android:background="@drawable/orange_stroke_white_solid_radi_1dp"
                        android:layout_marginTop="6dp"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/time_and_date"
                        android:textColor="#000000"
                        android:fontFamily="@font/inter_medium"
                        android:textSize="14sp"
                        android:layout_marginTop="@dimen/twenty_dp"
                        />

                    <TextView
                        android:id="@+id/dateTime"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="#6F6F6F"
                        android:fontFamily="@font/inter"
                        android:textSize="14sp"
                        android:padding="@dimen/_7sdp"
                        android:background="@drawable/orange_stroke_white_solid_radi_1dp"
                        android:layout_marginTop="6dp"
                        />
                    <TextView
                        android:id="@+id/label_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/amount_paid"
                        android:textColor="#000000"
                        android:fontFamily="@font/inter_medium"
                        android:textSize="14sp"
                        android:layout_marginTop="@dimen/twenty_dp"
                        />

                    <LinearLayout
                        android:id="@+id/hh"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="6dp"
                        android:padding="@dimen/_7sdp"
                        android:background="@drawable/orange_stroke_white_solid_radi_1dp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/totalFees"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/total_fees_1100"
                            android:textColor="#6F6F6F"
                            android:fontFamily="@font/inter"
                            android:textSize="14sp"
                            android:layout_marginTop="@dimen/_3sdp"
                            />

                        <TextView
                            android:visibility="gone"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/prepaid_amount_500"
                            android:textColor="#6F6F6F"
                            android:fontFamily="@font/inter"
                            android:textSize="14sp"
                            android:layout_marginTop="@dimen/_3sdp"
                            />

                        <TextView
                            android:visibility="gone"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/remaining_amount_600"
                            android:textColor="#6F6F6F"
                            android:fontFamily="@font/inter"
                            android:textSize="14sp"
                            android:layout_marginTop="@dimen/_3sdp"
                            />

                    </LinearLayout>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginVertical="@dimen/twenty_dp"
                    app:layout_constraintTop_toBottomOf="@id/llr"
                    />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </RelativeLayout>
</layout>

