<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/oneThirdGuide"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_percent="0.1" />

                <ImageView
                    android:id="@+id/backBtn"
                    app:layout_constraintTop_toBottomOf="@+id/oneThirdGuide"
                    android:layout_width="30dp"
                    android:layout_marginTop="10sp"
                    android:layout_marginStart="23dp"
                    android:layout_height="30dp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:src="@drawable/back_arrow">

                </ImageView>
                <TextView
                    android:id="@+id/loginText"
                    android:layout_width="wrap_content"
                    android:text="@string/forgot_password"
                    app:layout_constraintTop_toBottomOf="@+id/oneThirdGuide"
                    android:textColor="@color/black"
                    android:textSize="35dp"
                    android:textFontWeight="400"
                    android:layout_marginStart="20dp"
                    app:layout_constraintStart_toEndOf="@+id/backBtn"
                    android:layout_height="wrap_content" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/layoutInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:visibility="visible"
                    android:layout_marginHorizontal="20dp"
                    app:layout_constraintTop_toBottomOf="@+id/loginText"
                    tools:layout_editor_absoluteX="16dp">


                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="match_parent"
                        android:textColor="@color/grey_light"
                        android:fontFamily="@font/roboto_regular"
                        android:textSize="15sp"
                        android:layout_marginTop="10sp"
                        android:text="@string/email"
                        android:textFontWeight="400"
                        android:layout_height="wrap_content"
                        tools:ignore="MissingConstraints" />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/etForgotEmail"
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:gravity="center_vertical"
                        android:hint="@string/email_id"
                        android:paddingStart="10dp"
                        android:layout_marginTop="5dp"
                        android:imeOptions="actionNext"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:background="@drawable/grey_outline"
                        android:textColor="@color/black"
                        android:textColorHint="@color/text_input"
                        android:textSize="16sp"
                        android:visibility="visible"
                        app:ccp_showFullName="false"
                        app:layout_constraintTop_toBottomOf="@+id/textView"
                        app:layout_constraintStart_toStartOf="parent"
                        />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="match_parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:textColor="@color/black"
                        android:fontFamily="@font/roboto_regular"
                        android:textSize="15sp"
                        android:layout_marginBottom="5dp"
                        app:layout_constraintStart_toStartOf="parent"
                        android:text="@string/please_enter_your_email_address_you_will_receive_a_link_to_create_a_new_password_via_email"
                        android:textFontWeight="400"
                        android:layout_marginTop="10dp"
                        app:layout_constraintTop_toBottomOf="@+id/etForgotEmail"
                        android:layout_height="wrap_content"
                        tools:targetApi="28" />


                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/loginBtn"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:text="@string/send"
                        app:cornerRadius="@dimen/five_dp"
                        app:iconGravity="textEnd"
                        app:iconPadding="@dimen/ten"
                        android:textSize="@dimen/sixteen_sp"
                        app:iconSize="@dimen/fifteen"
                        android:layout_margin="@dimen/sixteen_dp"
                        app:iconTint="@color/white"
                        android:fontFamily="@font/roboto_regular"
                        android:backgroundTint="@color/app_color_second"
                        android:textColor="@color/white"
                        android:textAllCaps="false"
                        android:layout_marginTop="@dimen/fifteen"
                        app:layout_constraintTop_toBottomOf="@id/textView2"
                        />


                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
